--- a/stagehand/package.json
+++ b/stagehand/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.21.0",
+    "@auth0/auth0-vue": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@mdi/font": "5.9.55",
     "axios": "^0.26.1",
